# pimux2000

./: BEFORE_AFTER_COMPARISON.md  BUILTIN_REFACTOR_COMMIT_MSG.md  BUILTIN_REFACTOR_VERIFICATION.md  PRE_COMMIT_CHECKLIST.md  README.md  README_DOCUMENTATION.md  SESSION_COMPLETION_SUMMARY.md  WORK_COMPLETE.txt  buildServer.json  chat-view-plan.md  compact-handoff.md  slash-command.md  todo.txt
Config/: pimux2000-Info.plist
Pi/: Package.resolved  Package.swift
docs/: CURRENT_SESSION_STATUS.md  IMPLEMENTATION_REVIEW.md
pimux-server/: Cargo.toml  README.md  build.rs  releasor2000.toml  todo.txt
pimux-server/extensions/: pimux-live.ts
pimux-server/scripts/: smoke-live.sh
pimux-server/src/: channel.rs  host.rs  main.rs  message.rs  report.rs  self_update.rs  session.rs  transcript.rs
pimux-server/src/agent/: connection.rs  discovery.rs  extension.rs  helper.rs  live.rs  mod.rs  send.rs  service.rs  summarizer.rs  transcript.rs
pimux-server/src/server/: mod.rs  postgres_backup.rs  service.rs  web.rs
pimux-server/static/: pimux.css  reset.css
pimux-server/templates/web/: _layout_start.stpl  _page_header.stpl  archive_session.stpl  archive_sessions.stpl  error.stpl  report.stpl  reports.stpl  status.stpl
pimux2000/: ContentView.swift  PasswdInterpose.c  PreviewAttachmentFixture.swift  commandDictionary.plist  pimux2000.entitlements  pimux2000App.swift
pimux2000.xcodeproj/: project.pbxproj
pimux2000/Models/: AppDatabase.swift  AttachmentStore.swift  ComposerImage.swift  Host.swift  ImageAttachmentID.swift  Message.swift  MessageContentBlock.swift  MessageInfo.swift  OutgoingImageProcessor.swift  PendingLocalMessage.swift  PiSession.swift  PiSessionSync.swift  PimuxImageLoading.swift  PimuxServerClient.swift  ScreenshotScenario.swift  ServerConfiguration.swift  ServerFiles.swift  ServerInstaller.swift  SessionBrowserModel.swift  SessionRepository.swift  SlashCommand.swift  TranscriptFingerprint.swift  UITestFixtures.swift
pimux2000/Views/: AddHostSheet.swift  AddServerSheet.swift  CameraCaptureView.swift  ContentView.swift  FontPickerView.swift  InlineDataImageView.swift  Route.swift  (+14 more)
pimux2000Tests/: AppDatabaseTests.swift  ImageAttachmentIDTests.swift  MessageMarkdownRendererTests.swift  MessagesRequestTests.swift  OptimisticMessageTests.swift  PiSessionReadStatusTests.swift  PiSessionSyncTests.swift  PiSessionsRequestTests.swift  SessionBrowserModelTests.swift  SessionRepositoryTests.swift  SessionTranscriptUpdatePlannerTests.swift  SidebarSessionGroupingTests.swift  pimux2000Tests.swift
pimux2000UITests/: ScreenshotTests.swift  pimux2000UITests.swift  pimux2000UITestsLaunchTests.swift
scripts/: generate-screenshots.sh  list-active-pi-sessions.py
(+48 files in other folders)
