[package]
name = "pimux-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
hostname = "0.4"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
walkdir = "2.5"
