[package]
name = "pimux-server"
version = "0.2.37"
edition = "2024"
default-run = "pimux"

[[bin]]
name = "pimux"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
flate2 = "1.1"
futures-util = "0.3"
hostname = "0.4"
mdns-sd = "0.18.2"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tar = "0.4"
bytes = "1.10"
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-stream = "0.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"

[dev-dependencies]
tower = "0.5"
